# qwen-experimentation

./: .dockerignore  .gitignore  Dockerfile  README.md  project_plan.md  pyproject.toml
scripts/: debug_qwen3_5_video.py
scripts/prime/: bootstrap_env.sh  bootstrap_pod.sh  create_sandbox.sh  download_outputs.sh  prepare_workspace.sh  recommend_pod.py  run_experiment.sh  upload_project.sh  upload_video.sh
src/qwen_video_experiment/: __init__.py  io_utils.py  run_video_prompt.py
